# simple-enc-dec

./: Cargo.toml  README.md
linux/: install.sh  remote-install-crypto.sh  remote-install-ipc-broker.sh
linux/systemd/: enzo-crypto.service
src/: async_file_gcm.rs  base52.rs  crypto.rs  file_gcm.rs  lib.rs  logger.rs  result.rs  rotn.rs  scrypt.rs
windows/: install.bat  install.ps1
