[package]
name = "enzo-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
openssl = "0.10"
base64 = "0.22"
ipc-broker = "1.0"
tokio = "1"
anyhow = "1.0"
serde_json = "1.0"
serde = "1.0"
async-trait = "0.1"
log = "0.4"
chrono = "0.4"
fern = "0.7"
serde_repr = "0.1"
json-result = "0.1"

[dev-dependencies]
rand = "0.9"
tempfile = "3.23"
