[package]
name = "enzo-crypto"
version = "0.1.5"
edition = "2024"

[dependencies]
openssl = "0.10"
base64 = "0.22"
ipc-broker = "1.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
serde = "1.0"
async-trait = "0.1"
log = "0.4"
chrono = "0.4"
fern = "0.7"
serde_repr = "0.1"
json-result = "0.1"

[dev-dependencies]
rand = "0.9"
tempfile = "3.23"

[profile.release]
opt-level = "z"          # optimize for minimum size
lto = true               # full link-time optimization
codegen-units = 1        # better optimization, smaller binary
panic = "abort"          # remove unwind machinery
strip = "symbols"        # remove all symbols
debug = false            # remove debug info
incremental = false      # prevent extra metadata
overflow-checks = false  # remove overflow checks